--- a/src/FoodProject/Views/Home/Contact.cshtml
+++ b/src/FoodProject/Views/Home/Contact.cshtml
@@ -3,6 +3,9 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
+<h1>@ViewBag.Fart</h1>
+<h2>@ViewBag.Fart</h2>
+<h3>@ViewBag.Fart</h3>
 
 <address>
     One Microsoft Way<br />
