--- a/src/FoodProject/Views/Shared/_Layout.cshtml
+++ b/src/FoodProject/Views/Shared/_Layout.cshtml
@@ -1,11 +1,20 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @*@Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")*@
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>@ViewBag.Title - My ASP.NET Application</title>
+
+	<script src="~/Scripts/jquery-{version}.js"></script>
+	<script src="~/Scripts/jquery.validate*"></script>
+	<script src="~/Scripts/modernizr"></script>
+	<script type="text/javascript" src="~/Scripts/bootstrap.js"></script>
+	<script type="text/javascript" href="~/Scripts/respond.js"></script>
+	<link rel="stylesheet" type="text/css" href="~/Content/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="~/Content/site.css">
+
+	@*@Styles.Render("~/Content/css")
+		@Scripts.Render("~/bundles/modernizr")*@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
