Added a new controller

--- a/src/FoodProject/Views/Home/Contact.cshtml
+++ b/src/FoodProject/Views/Home/Contact.cshtml
@@ -3,9 +3,9 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-<h1>@ViewBag.Fart</h1>
-<h2>@ViewBag.Fart</h2>
-<h3>@ViewBag.Fart</h3>
+<h1>@ViewBag.Fartbag</h1>
+<h2>@ViewBag.Fartbag</h2>
+<h3>@ViewBag.Fartbag</h3>
 
 <address>
     One Microsoft Way<br />
@@ -15,6 +15,5 @@
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Dawson Richey</strong>   <a href="mailto:dawsonrichey@gmail.com">dawsonrichey@gmail.com</a>
 </address>
